reactiveからstreamに戻す。（push型からpull型）fluxは、disposeしないとリソース開放しないのかな、。。だから、メモリリークするんだけど。。